
[package]
name = "huffman"
version = "0.1.0"
description = "Convert string of words to and from Huffman encoding, from stdin to stdout."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2"
clap = { version = "3.0", features = ["derive"] }